- new font signature - bigger icons and signature - speed up slider grab in gallery - slow down buttons sliders in about - add htacces file - font-awesome - new slider in gallery

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "josipaportfolio",
+  "homepage": "http://josipabilic.com",
   "private": true,
   "version": "0.0.0",
   "type": "module",
