--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@emailjs/browser": "^4.3.3",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
-    "react-transition-group": "^4.4.5"
+    "react-transition-group": "^4.4.5",
+    "swiper": "^11.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
